--- a/website/wp-content/themes/StudentManager/css/login.css
+++ b/website/wp-content/themes/StudentManager/css/login.css
@@ -1,3 +1,6 @@
+body {
+    background: linear-gradient(to bottom, #2e4057, #2a628F);
+}
 .login h1 a
 {
     background-image:url("../assets/brand/mylife_logo.jpg");
@@ -14,20 +17,37 @@
     text-align:center;
 }
 
-form, p.message {
+form, p.message, div#login_error {
     max-width:300px;
     margin:auto!important;
     display:block;
+    background-color: #3E92CC!important;
+    border-radius:4px;
+    color:white;
+}
+form a, p.message a, div#login_error a {
+    color:white!important;
+    font-weight:bold;
 }
 
-p.message {
+p.message, div#login_error {
     padding: 12px 22px!important;
     margin-bottom: 10px!important;
+}
+
+input[type="text"], input[type="number"], input[type="email"] {
+    background-color:#A9BCD0!important;
+    border-color: #A9BCD0;
+    background-color: #A9BCD0!important;
+    border-color: #A9BCD0!important;
+    border-radius: 7px;
+    padding: 5px 7px!important;
 }
 
 label {
     display:block;
     margin:auto;
+    color:white!important;
 }
 
 #wp-submit {
@@ -36,4 +56,7 @@ label {
     float: none;
     border-radius:25px;
     width:100%;
+    background-color: #197278!important;
+    font-weight:bold;
+    color: white!important;
 }
