--- a/website/wp-content/themes/StudentManager/style.css
+++ b/website/wp-content/themes/StudentManager/style.css
@@ -120,5 +120,9 @@ footer a {
 /*=======================*/
 #user-dash-tabs {
     width:100%;
-    margin-top:50px;
+    margin:50px auto;
+}
+
+.tab-content {
+/*    margin:0px auto 50px auto;*/
 }
